[fix]: 페 준비중 z-index 수정

--- a/src/styles/List.module.scss
+++ b/src/styles/List.module.scss
@@ -60,6 +60,7 @@
   background-color:rgba(0,0,0,0.85);
   color:#fff;
   font-size:3rem;
+  z-index:1;
    a {
     margin:2rem 0 0 0;
     padding:0 0 1rem 0;
