--- a/src/styles/TitleNavigation.module.scss
+++ b/src/styles/TitleNavigation.module.scss
@@ -51,7 +51,7 @@
     svg {
       width:1.9rem;
       height:1.9rem;
-      margin-right: 0.6rem;
+      margin-left: 0.6rem;
       transform:translateY(0.2rem);
       transition-duration:0.2s;
       transition-property: transform;
