--- a/src/styles/View.module.scss
+++ b/src/styles/View.module.scss
@@ -23,8 +23,10 @@
     h2 {
       font-size:2.4rem;
       font-family:$PretendarBold;
-      margin: 0 0 2rem 0;
+      margin: 2rem 0 2rem 0;
+      line-height:1.3;
       scroll-margin-top:8rem;
+
     }
     p {
       code {
@@ -116,6 +118,7 @@
   text-align:center;
   font-size:1.6rem;
   margin:0 0 1rem 0;
+  line-height:1.3;
 }
 
 .link {
